--- a/DAY-5/main.css
+++ b/DAY-5/main.css
@@ -1,56 +1,35 @@
-body {
-  margin-left: auto;
-  margin-right: auto;
-  align-items: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-h1 {
-  color: #5C33F6;
-  text-align: center;
+.calculator {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  height: 100vh;
+  grid-template-columns: repeat(4, 70px);
+  grid-template-rows: minmax(120px, auto) repeat(5, 70px);
+  background-color: rgba(159, 238, 79, 0.137);
 }
-
-.main {
-  width: fit-content;
-  height: fit-content;
-  margin-left: auto;
-  margin-right: auto;
-  align-items: center;
-  border: 2px solid #0A1931;
-  border-radius: 5px;
-}
-
 button {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  text-align: center;
-  margin: 3px;
-  background-color: white;
+  font: 2rem;
+  border: 1px solid white;
+  background-color: rgba(241, 99, 206, 0.363);
+  outline: none;
 }
-
-.zero,
-.equal {
-  width: 50px;
-  height: 35px;
-  border-radius: 5px;
-
+.sizetwo {
+  grid-column: span 2;
 }
-
-#displayarea {
-  margin: 3px;
-  width: auto;
-  height: 100px;
-  align-items: center;
-  border: 2px solid black;
-  border-radius: 5px;
-  background-color: #343A40;
+.output {
+  grid-column: 1/-1;
+  background-color: rgba(0, 0, 0, 0.473);
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+}
+.output .previous {
   color: white;
-}
-
-.c {
-  background: #FFC107;
-}
-
-.below {
-  background-color: #E4EFE7;
+  font-size: 2.5rem;
 }
