--- a/DAY-4/main.css
+++ b/DAY-4/main.css
@@ -1,62 +1,71 @@
+body {
+  text-align: center;
+}
 .clock {
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    border: 15px solid rgb(131, 12, 77);
-    margin: 0 auto;
-    position: relative;
-    box-sizing: border-box;
+  width: 500px;
+  height: 500px;
+  background-color: blanchedalmond;
+  display: inline-block;
+  border: 5px solid rgba(95, 1, 42, 0.507);
+  padding: 20px;
+  border-radius: 50%;
 }
-
-.twelve {
-    width: 10px;
-    height: 15px;
-    background: black;
-    position: absolute;
-    left: 50%;
+.second {
+  height: 250px;
+  width: 5px;
+  left: 245px;
+  top: -500px;
+  background-color: rgb(255, 0, 13);
+  z-index: 3;
+  animation: sec_anim 60s linear infinite;
 }
-
-.six {
-    width: 10px;
-    height: 15px;
-    background: black;
-    position: absolute;
-    left: 50%;
-    bottom: -1px;
-}
-
-.three {
-    width: 15px;
-    height: 10px;
-    background: black;
-    position: absolute;
-    bottom: 50%;
-    right: 1px;
-}
-
-.nine {
-    width: 15px;
-    height: 10px;
-    background: black;
-    position: absolute;
-    bottom: 50%;
+.minute {
+  height: 250px;
+  width: 8px;
+  left: 242.5px;
+  top: -250px;
+  background-color: rgb(186, 189, 165);
+  z-index: 2;
+  animation: minute_anim 600s linear infinite;
 }
 
 .hour {
-    width: 9px;
-    height: 160px;
-    background-color: rgb(192, 243, 53);
-    left: 50%;
-    position: absolute;
-    top: 20px;
+  height: 250px;
+  width: 10px;
+  left: 242.5px;
+  background-color: rgb(81, 83, 81);
+  z-index: 1;
+  animation: hour_anim 6000s linear infinite;
+}
+.hour,
+.second,
+.minute {
+  line-height: 45px;
+  position: relative;
+  transform-origin: bottom;
+}
+@keyframes sec_anim {
+  from {
+    transform: rotateZ(0deg);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
 }
 
-.minute {
-    width: 9px;
-    height: 160px;
-    background-color: rgb(55, 143, 243);
-    position: absolute;
-    transform: rotate(30deg);
-    top: 26px;
-    left: 61%;
+@keyframes minute_anim {
+  from {
+    transform: rotateZ(0deg);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+@keyframes hour_anim {
+  from {
+    transform: rotateZ(0deg);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
 }
