--- a/DAY-21/reactapp/src/App.css
+++ b/DAY-21/reactapp/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.container {
+  border: 1px solid black;
+  width: 350px;
+  height: 500px;
+  padding: 10px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background: pink;
+}
+.card {
+  width: 90%;
+  border: 1px solid;
+  font-size: 25px;
+  padding: 10px;
+  margin: 6px;
+  border-radius: 5px;
+}
+button {
+  position: relative;
+  padding: 5px;
+  background-color: rgb(39, 123, 219);
+  font-weight: bold;
+  left: 35%;
+}
+.food {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 30px;
+}
+h3 {
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.submit {
+  font-size: 15px;
+  background-color: rgb(156, 158, 22);
+  padding: 5px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  font-weight: bold;
+  font-size: 20px;
+}
+input {
+  font-size: 16px;
+  font-size: 20px;
+  font-family: inherit;
+  padding: 0.25em 0.5em;
+  background-color: transparent;
+  border: 2px solid var(--input-border);
+  border-radius: 4px;
 }
